Add portfolio file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kavishanthan - Portfolio</title>
 </head>
 <body>
-    <h1>Kavishanthan Saarvaloganayagam</h1>
+    <h1>Kavishanthan Sarvaloganayagam</h1>
     <h2>Web Developer</h2>
     <p style="color: blue;">Get to know me!!</p>
 </body>
