--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kavishanthan - Portfolio</title>
 </head>
-<body>
+<body style="background-color: black; color: aliceblue;">
     <h1>Kavishanthan Sarvaloganayagam</h1>
     <h2>Web Developer</h2>
     <p style="color: blue;">Get to know me!!</p>
