--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body style="background-color: black; color: aliceblue;">
     <h1>Kavishanthan Sarvaloganayagam</h1>
     <h2>Web Developer</h2>
-    <p style="color: blue;">Get to know me!!</p>
+    <p style="color: rgb(252, 252, 252);">Get to know me!!</p>
 </body>
 </html>
